Update components, enable timeline, recompile main.css

--- a/src/bulma/custom/_sass/main.scss
+++ b/src/bulma/custom/_sass/main.scss
@@ -150,7 +150,7 @@ $colors: map-merge($colors, $addColors);
 @import "../../bower_components/bulma-steps/dist/bulma-steps";
 // @import "../../bower_components/bulma-switch/dist/bulma-switch";
 // @import "../../bower_components/bulma-tagsinput/dist/bulma-tagsinput";
-// @import "../../bower_components/bulma-timeline/dist/bulma-timeline";
+@import "../../bower_components/bulma-timeline/dist/bulma-timeline";
 @import "../../bower_components/bulma-tooltip/dist/bulma-tooltip";
 
 // Custom extension /Users/rcogley/dev/eSolia_2018/src/bulma/custom/_sass/
