--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{ with .Params.robotsdisallow }}<meta name="robots" content="noindex, nofollow, noarchive">{{ else }}<meta name="robots" content="index, follow, archive">{{ end }}
     <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
+    <meta name="description" content="{{ if .IsPage}}{{ .Description }}{{ else }}{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ if eq .Lang "en" }}Pages on '{{ .Title }}' from eSolia Inc., a Tokyo-based IT management and support company.{{ end }}{{ if eq .Lang "ja" }}'{{ .Title }}' に関するページ、東京をベースにしたITマネージメントやサポート会社、株式会社イソリアから。{{ end }}{{ end }}{{end}}">
+    
+    <meta name="keywords" content="{{if .IsPage}}{{ range $i, $e := .Params.tags }}{{ if $i }}, {{ end }}{{ $e }}{{ end }}{{else}}{{ range $i, $e := .Site.Params.keywords }}{{ if $i }}, {{ end }}{{ $e }}{{ end }}{{end}}">
+    {{ if .Params.author }}<meta name="author" content="{{ .Params.author }}">{{ end }}
+    <link href="http://gmpg.org/xfn/11" rel="profile">
+    <meta name="generator" content="Hugo {{ .Hugo.Version}} {{ .Hugo.CommitHash }} {{ replace .Hugo.BuildDate "+0900" "JST" }}" />
+    <link rel="canonical" href="{{ .Permalink }}">
+
     <script src="https://use.typekit.net/fwz4gtk.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <link rel="stylesheet" type="text/css" href="/css/main.min.css{{with getenv "MAINCSS_HASH"}}?v={{.}}{{end}}">
