Constrain width of timeline

--- a/src/bulma/custom/_sass/main.scss
+++ b/src/bulma/custom/_sass/main.scss
@@ -179,7 +179,7 @@ div.bg-dark {
    }
 
 // set max width of paragraphs for ease of reading
-p,ul,ol,table,blockquote,span,small,div.carousel,figure,iframe,div#search-results,div.p.subtitle.is-italic {
+p,ul,ol,table,blockquote,span,small,div.carousel,div.timeline,figure,iframe,div#search-results,div.p.subtitle.is-italic {
     max-width: 38em;
     // margin: auto;
 }
