--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,21 +11,13 @@
        {{- $currentPage := . -}}
        {{ range .Site.Menus.services }}
          <a class="is-hoverable{{ if $currentPage.IsMenuCurrent "services" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}"><p class="menu-label has-text-info">{{ .Name }}</p></a>
-          <ul class="menu-list">
-          {{ if .HasChildren }}
-          {{ range .Children }}
-            <li><a class="is-hoverable{{ if $currentPage.IsMenuCurrent "services" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>
-          {{ end }}
-          {{ end }}
+          <ul class="menu-list">{{ if .HasChildren }}{{ range .Children }}
+            <li><a class="is-hoverable{{ if $currentPage.IsMenuCurrent "services" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>{{ end }}{{ end }}
           </ul>
        {{ end }}
-
-
         <p class="menu-label has-text-info">Tags</p>
-       <div class="tags has-margin-l">
-       {{ range .Params.tags }}
-        <span class="tag is-rounded is-light"><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a></span>
-       {{ end }}
+       <div class="tags has-margin-l">{{ range .Params.tags }}
+        <span class="tag is-rounded is-light"><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a></span>{{ end }}
        </div>
        <br><br>
 
