Change title to proper h1 rather than a p with styling
Fixes #77

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -11,16 +11,10 @@
        {{- $currentPage := . -}}
        {{ range .Site.Menus.services }}
          <a class="is-hoverable{{ if $currentPage.IsMenuCurrent "services" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}"><p class="menu-label has-text-info">{{ .Name }}</p></a>
-          <ul class="menu-list">
-          {{ if .HasChildren }}
-          {{ range .Children }}
-            <li><a class="is-hoverable{{ if $currentPage.IsMenuCurrent "services" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>
-          {{ end }}
-          {{ end }}
+          <ul class="menu-list">{{ if .HasChildren }}{{ range .Children }}
+            <li><a class="is-hoverable{{ if $currentPage.IsMenuCurrent "services" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>{{ end }}{{ end }}
           </ul>
        {{ end }}
-
-
         <p class="menu-label has-text-info">Tags</p>
        <div class="tags has-margin-l">
        {{ range .Params.tags }}
@@ -33,7 +27,7 @@
   </div>
   <div class="column is-main-content">
       <div class="box content is-size-5-desktop is-size-6-mobile has-margin-m has-padding-t-xxs">
-        <p class="title is-5"><h1>{{ .Title }}</h1></p>
+        <h1 class="title has-margin-t-l has-margin-b-m">{{ .Title }}</h1>
         <p class="subtitle is-italic">{{ .Params.subtitle }}</p>
         {{ .Content }}
 
