--- a/layouts/page/about.html
+++ b/layouts/page/about.html
@@ -29,7 +29,7 @@
   </div>
   <div class="column is-main-content">
       <div class="box content is-size-5-desktop is-size-6-mobile has-margin-m has-padding-t-xxs">
-        <p class="title is-5"><h1>{{ .Title }}</h1></p>
+        <h1 class="title has-margin-t-l has-margin-b-m">{{ .Title }}</h1>
         <p class="subtitle is-italic has-text-esolia-yellow-3">{{ .Params.subtitle }}</p>
         {{ .Content }}
         {{ if isset .Params "formcheckboxes" }}
