Remove extraneous p from map image and set max width for figure.image
Fixes #78

--- a/src/bulma/custom/_sass/main.scss
+++ b/src/bulma/custom/_sass/main.scss
@@ -178,8 +178,8 @@ div.bg-dark {
    background-color: $dark;
    }
 
-// set max width of paragraphs for ease of reading
-p,ul,ol,table,blockquote,span,small,div.carousel,div.timeline,figure,iframe,div#search-results,div.p.subtitle.is-italic {
+// set max width of paragraphs for ease of reading 
+p,ul,ol,table,blockquote,span,small,div.carousel,div.timeline,figure,figure.image,iframe,div#search-results,div.p.subtitle.is-italic {
     max-width: 38em;
     // margin: auto;
 }
