Put border around table

--- a/layouts/shortcodes/showjapancontact.html
+++ b/layouts/shortcodes/showjapancontact.html
@@ -1,5 +1,5 @@
 {{ if eq $.Site.Language.Lang "en" }}
-<table class="table is-size-6 is-striped is-hoverable is-fullwidth">
+<table class="table is-size-6 is-striped is-hoverable is-fullwidth is-bordered">
   <thead>
     <tr>
       <th>Service</th>
@@ -38,7 +38,7 @@
 {{ end }}
 
 {{ if eq $.Site.Language.Lang "ja" }}
-<table class="table is-size-6 is-striped is-hoverable is-fullwidth">
+<table class="table is-size-6 is-striped is-hoverable is-fullwidth is-bordered">
   <thead>
     <tr>
       <th>サービス</th>
