--- a/layouts/404.html
+++ b/layouts/404.html
@@ -33,10 +33,9 @@
   </div>
   <div class="column is-main-content">
       <div class="box content is-size-5-desktop is-size-6-mobile has-margin-m has-padding-t-xxs">
-        <p class="title is-5"><h1>{{ .Title }}</h1></p>
+        <h1 class="title has-margin-t-l has-margin-b-m">{{ .Title }}</h1>
         <p class="subtitle is-italic has-text-esolia-blue-2">{{ i18n "gen404subtitle" }}</p>
         {{ i18n "gen404message" | markdownify }}
-
     <ul>
     {{ range $taxonomyname, $taxonomy := .Site.Taxonomies }}
       <li><a class="link dim" href="/{{ $taxonomyname | urlize }}"><h2 class="dark-green">{{ $taxonomyname }}</h2></a>
