Don't use an </img> end tag in html5 (was needed in xhtml)
Fixes #86

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -102,7 +102,7 @@
                 <div class="tile is-parent is-shaded">
                   <article class="tile is-child box">
                     <figure class="image">
-                      <img src="/img/eSolia-Logo-Flat-2015.png" alt="eSolia Inc. Blue and Yellow Logo"></img>
+                      <img src="/img/eSolia-Logo-Flat-2015.png" alt="eSolia Inc. Blue and Yellow Logo">
                     </figure>
                   </article>
                 </div>
