--- a/layouts/partials/modal2.html
+++ b/layouts/partials/modal2.html
@@ -27,7 +27,7 @@
               </div>
               <div class="column">
                 <figure class="image">
-                  <img src="/img/eSolia-Logo-Flat-2015.png" alt="eSolia Inc. Blue and Yellow Logo" itemprop="logo"></img>
+                  <img src="/img/eSolia-Logo-Flat-2015.png" alt="eSolia Inc. Blue and Yellow Logo" itemprop="logo">
                 </figure>
               </div>
             </div>
