--- a/layouts/post/post.html
+++ b/layouts/post/post.html
@@ -43,6 +43,12 @@
         <p class="title is-5"><h1>{{ .Title }}</h1></p>
         <p class="subtitle is-italic has-text-esolia-blue-2">{{ .Params.subtitle }}</p>
         {{ .Content }}
+        {{ if isset .Params "formcheckboxes" }}
+          {{- partial "form-moreinfo.html" . -}}
+        {{ end }}
+        {{if isset .Params "gallery_id" }}
+           {{ partial "gallery.html" . }}
+        {{ end }}
 
       </div>
   </div>
