--- a/layouts/partials/footer1.html
+++ b/layouts/partials/footer1.html
@@ -9,6 +9,7 @@
             <a class="link" href="/">{{ i18n "genhomename" }}</a> | 
             <a class="link" href="/license">{{ i18n "genlicensename" }}</a> | 
             <a class="link" href="/japan-contacts">{{ i18n "genjpcontactsname" }}</a> | 
+            <a class="link" href="/eSolia-Contacts-vCard.vcf">vCard</a> |             
             <a class="link" href="/colophon">{{ i18n "gencolophonname" }}</a>
             <br>
             <br>
