--- a/layouts/shortcodes/processsubmenu.html
+++ b/layouts/shortcodes/processsubmenu.html
@@ -1,10 +1,9 @@
 <div class="buttons has-addons">
   <a class="button" href="/process"><span class="icon"><i class="fas fa-anchor"></i></span></a>
  
-{{ $currentPage := (.Get 0) }}
+{{ $currentPage := $.Page }}
 {{ range $.Site.Menus.processsub }}
-
-  <a class="button{{ if $currentPage.IsMenuCurrent "processsub" . }} has-text-danger{{ end }}" href="{{ .URL }}">{{ .Name }}</a>
+  <a class="button{{ if $currentPage.IsMenuCurrent "processsub" . }} is-active{{ end }}" href="{{ .URL }}">{{ .Name }}</a>
 {{ end }}
 
 </div>
