Remove class w/ no effect
Signed-off-by: Rick Cogley <rick.cogley@esolia.co.jp>

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -190,7 +190,7 @@
               <p class="title is-size-4-mobile">{{ i18n "topsectionpledge" }}</p>
               <p class="subtitle is-size-6-mobile">{{ i18n "topsectionpledgesub" }}</p>
               <div class="content">
-                <p class="is-7 is-size-7-mobile">{{ i18n "topsectionpledgetext" | safeHTML | markdownify }}</p>
+                <p class="is-size-7-mobile">{{ i18n "topsectionpledgetext" | safeHTML | markdownify }}</p>
 
                 <figure class="image is-256x256">
 <img class="" data-caption="eSolia Logo" alt="Graphic of the eSolia Chicklet Logo" src="/img/eSolia-Chicklet-Color.svg" >
