Added some "decoration" on site top page regarding 20th anniversary, fixed Japanese!

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -193,7 +193,7 @@
                 <p class="is-size-7-mobile">{{ i18n "topsectionpledgetext" | safeHTML | markdownify }}</p>
 
                 <figure class="image is-256x256">
-<img class="" data-caption="eSolia Logo" alt="Graphic of the eSolia Chicklet Logo" src="/img/eSolia-Chicklet-Color.svg" >
+<img class="" data-caption="eSolia Logo" alt="Graphic of the eSolia Chicklet Logo" src="/img/eSolia-20th-Lozenge-2019.png" >
 </figure>
 
               </div>
