Replace google analytics with fathom. Setting is in config.toml, and you just use {{ .Site.Params.Analytics }} to pull it
Signed-off-by: Rick Cogley <rick.cogley@esolia.co.jp>

--- a/layouts/partials/footer1.html
+++ b/layouts/partials/footer1.html
@@ -23,5 +23,10 @@
 
     </div>
   </div>
+  {{ if not .Site.BuildDrafts }}
+    <!-- Fathom - beautiful, simple website analytics -->
+    <script src="https://scallop.esolia.pro/script.js" site="{{ .Site.Params.Analytics }}" defer></script>
+    <!-- / Fathom -->
+  {{ end }}
 </footer>
 {{ "<!-- LEAVING partial footer1.html -->" | safeHTML }}
