--- a/layouts/partials/footer1.html
+++ b/layouts/partials/footer1.html
@@ -8,6 +8,7 @@
             <p>&copy;1999-{{ now.Format "2006" }} {{ i18n "footerallrightsreserved"}}</p>
             <a class="link" href="/">{{ i18n "genhomename" }}</a> |
             <a class="link" href="/license">{{ i18n "genlicensename" }}</a> |
+            <a class="link" href="/privacy">{{ i18n "genprivacyname" }}</a> |
             <a class="link" href="/japan-contacts">{{ i18n "genjpcontactsname" }}</a> |
             <a class="link" href="/eSolia-Contacts-vCard.vcf">vCard</a> |
             <a class="link" href="/colophon">{{ i18n "gencolophonname" }}</a>
